<resources>
    <string name="app_name">Free from Stammering</string>
    <string name="it_s_time_to_practice">Time To Practice</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_page2">Sign Up</string>
    <string name="i_already_have_an_acciunt">I ALREADY HAVE AN ACCOUNT</string>
    <string name="log_in">Login</string>
    <string name="forget_password">Forget password?</string>
    <string name="or">OR</string>
    <string name="log_in_with_google">login with google</string>
    <string name="get_started">get started</string>
    <string name="exercise_session_ngo_and_get_your_freedom"><b>Exercise Session: </b>\nGo and Get Your Freedom</string>
    <string name="meditation_text"><b>Meditation:</b> \nFocus Stays Calm</string>
    <string name="_7_techniques">7-Techniques</string>
    <string name="connection">Connections</string>
    <string name="articles"><b>Articles</b>\nFollow the Guideline With\nExperts Opinions</string>
    <string name="sample1"><b>Source</b></string>
    <string name="sample2">Title of it</string>
    <string name="sample3">Description of Article</string>
    <string name="exercise_session">Exercise Session</string>
    <string name="speech_training"><b>Speech Training</b>\nTrain Yourself To Gain\nWhat You Want</string>
    <string name="vowels_consonents"><b><![CDATA[Vowels & Consonants]]></b>\nPull Your Strings Speak\nOut Grab Your Audience</string>
    <string name="reading"><b>Reading</b>\nShort Stories of Conquers\nMotivation for learners</string>
    <string name="sp_fl"><b>Speech Flow</b>\nGo With Speech Flow Learn\nHow To Articulate Words</string>
    <string name="article">Articles</string>
    <string name="time">4 min</string>
    <string name="quick_notes">Quick Notes</string>
    <string name="space" />
    <string name="read_more"><![CDATA[Read more…]]></string>
    <string name="stutter1">Stuttering</string>
    <string name="motivations">Motivations</string>
    <string name="speech_flow">Speech Flow</string>
    <string name="clicl_here_for_more_deatails">Click here for more deatails..</string>
    <string name="vowels_consonants"><![CDATA[Vowels & Consonants]]></string>
    <string name="a">A</string>
    <string name="vowel">Vowel</string>
    <string name="doctor">Speech Therapists</string>
    <string name="communities">Communities</string>
    <string name="fb_groups">Facebook Groups</string>
    <string name="whatsapp_groups">WhatsApp Groups</string>
    <string name="twitter_groups">Twitter Groups</string>
    <string name="stuttering_as_tms_mbs">Stuttering TMS/MBS</string>
    <string name="stop_holding_back">Stop Holding Back</string>
    <string name="stammering_management">Stammering Management</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="rateit">Rate the app</string>
    <string name="join_our_community">Join our community</string>
    <string name="shareapp">Share our app</string>
    <string name="about_us">About us</string>
    <string name="faqss">Faqs</string>
    <string name="log_out">LOG OUT</string>
    <string name="help_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="issue">Describe your issue(be specific)</string>
    <string name="send">Send</string>
    <string name="recipient">Recipient</string>
    <string name="free_from_stammering">Free From Stammering\n1.1.0</string>
    <string name="twitters">Follow us on Twitter</string>
    <string name="like_us_on_facebook">Like us on Facebook</string>
    <string name="instagram">Join us on Instagram</string>
    <string name="contact">Contact us</string>
    <string name="shb_speech_practice">SHB Speech Practice</string>
    <string name="freedom_from_stammering">Free From Stammering</string>
    <string name="meditation">Meditation</string>
    <string name="video">Videos</string>
    <string name="meditation101">Meditation 101</string>
    <string name="wim_hof_breathing">Wim Hof Breathing</string>
    <string name="heal_your_body_joe">Heal Your Body(Joe)</string>
    <string name="guided">Guided Meditation.Joe</string>
    <string name="dr_joe_dispenza">Dr. Joe Dispenza</string>
    <string name="_5_happiness_hacks">5 Happiness Hacks</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Let\'s speak to train yourself</string>
    <string name="tech1">Valsalva</string>
    <string name="valsalva_maneuver">Valsalva Maneuver</string>
    <string name="articlesss">article</string>
    <string name="videoss">video</string>
    <string name="tms">TMS</string>
    <string name="mcguire_program">McGuire Program</string>
    <string name="costalbreathing">Costal Breathing</string>
    <string name="speechfluency">Speech Fluency</string>
    <string name="sm">Stuttering Modification</string>
    <string name="integrative_approach">Integrative Approach</string>
    <string name="username">Username</string>
    <string name="reset_password">Reset Password</string>
    <string name="login_as_guest">LOGIN AS GUEST</string>
    <string name="password_8_characters">Password (8+ characters)</string>
    <string name="mice">mice</string>
    <string name="password_5_characters">Password (5+ characters)</string>
    <string name="email_address">Email address</string>
    <string name="arrow">arrow</string>
    <string name="todo">TODO</string>
    <string name="back">back</string>
    <string name="articless">article</string>
    <string name="youtube">youtube</string>
    <string name="backtotech">backtotech</string>
    <string name="freedom_from_stammering_1_0">Freedom From Stammering \n1.0.0</string>
    <string name="banner_guest">ca-app-pub-6570955792990742/6367265901</string>
    <string name="banner_practice">ca-app-pub-6570955792990742/6964379319</string>
    <string name="banner_exercise">ca-app-pub-6570955792990742/9010537278</string>
    <string name="banner_speech_flows">ca-app-pub-6570955792990742/7314312227</string>
    <string name="backside">backside</string>
    <string name="rate">Rate our app</string>
</resources>
