<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="15dp"
    android:elevation="3dp"
    android:focusable="true"
    android:clickable="true"
    android:padding="10dp"
    android:background="@drawable/main_page_items"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:targetApi="lollipop">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/storyTeller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/main_page_button"
            android:textAppearance="?android:textAppearanceSmall"
            android:fontFamily="sans-serif"
            android:text="@string/sample2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="end"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/timeTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main_page_button"
            android:singleLine="true"
            android:textAppearance="?android:textAppearanceSmall"
            android:fontFamily="sans-serif"
            android:text="@string/time"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main_page_button"
            android:singleLine="true"
            android:layout_margin="5dp"
            android:textStyle="normal"
            android:textAppearance="?android:itemTextAppearance"
            android:fontFamily="sans-serif"
            android:text="@string/read_more"/>
    </LinearLayout>

</LinearLayout>