<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:backgroundTint="@color/background"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="true"
        android:text="@string/it_s_time_to_practice"
        android:textStyle="normal"
        android:fontFamily="monospace"
        android:textAppearance="?android:textAppearanceLarge"/>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gif"
        android:background="@drawable/background_front_page"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY"
        android:src="@drawable/logo_gif"
        tools:srcCompat="@tools:sample/avatars"/>

    <Button
        android:id="@+id/signUp"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:text="@string/sign_up"
        android:textStyle="normal"
        android:textColor="@color/background"
        android:fontFamily="monospace"
        android:textAppearance="?android:textAppearanceSmall"
        android:layout_marginTop="50dp"
        android:background="@drawable/front_button_shape"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/alreayAccount"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:text="@string/i_already_have_an_acciunt"
        android:textStyle="normal"
        android:textColor="@color/background2"
        android:fontFamily="monospace"
        android:textAppearance="?android:textAppearanceSmall"
        android:layout_marginTop="20dp"
        android:background="@drawable/front_button_shap2"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>