<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_page"
    tools:context=".ValsalvaManeuver">

    <LinearLayout
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="0.3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <ImageView
                android:id="@+id/backtotech1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_blue_24dp"
                android:contentDescription="@string/back"
                tools:ignore="VectorDrawableCompat" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1.7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/valsalva_maneuver"
                android:textColor="@color/main_page_button"
                android:textAppearance="?android:textAppearanceMedium"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/articletech1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:elevation="3dp"
            android:background="@drawable/main_page_items"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            tools:targetApi="lollipop"
            android:gravity="center"
            tools:ignore="NestedWeights">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/article"
                android:contentDescription="@string/articless" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/main_page_button"
                android:lines="1"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:fontFamily="sans-serif"
                android:text="@string/articless"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/videotech1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.5"
            android:elevation="3dp"
            android:background="@drawable/main_page_items"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:targetApi="lollipop">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_video_library_blue_24dp"
                android:contentDescription="@string/youtube"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/main_page_button"
                android:lines="1"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:fontFamily="sans-serif"
                android:text="@string/videoss"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>